--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -203,12 +203,12 @@
     border-radius: 18px;
     border: 1px solid #cfcece;
   } */
-
+/* 
 .popup-content {
     border-radius: 5px;
     width: 80% !important;
     padding: 30px!important;
-}
+} */
 
 .modal {
     border-radius: 10px;
